client/src/views/Gallery/Filter.less
.filter-container {
    width: 200px;
    padding: 20px;
    border: 2px solid #f3d250;
    position: fixed;
    left: 1vh;
    top: 18vh;
    height: 34vh;
    bottom: 0;
    background-color: #59ABDF;
    z-index: 1000;
    border-radius: 20px;
}

h2 {
    color: #f4f4f5;
    font-size: 1rem;
}

h3 {
    color: #f4f4f5;
    font-size: 0.9rem;
    margin-right: 120px;
}
  
.filter-section {
    margin-bottom: 5px;
}

label {
    display: flex;
    align-items: center;
    font-size: 0.9rem;
    color: #f4f4f5;
    margin-left: 10px;
}

// Not checked box style
label input[type="checkbox"] {
    margin-right: 5px;
}




/* Hover effect for checkboxes */
// label input[type="checkbox"]:hover + span {
//     text-decoration: underline;
//     cursor: pointer;
// }


  

